:speech_balloon: Update dictionary for workspace

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,11 @@
 {
   "cSpell.words": [
     "btreemap",
+    "datetime",
     "dedup",
     "divmod",
     "fibb",
+    "gigasecond",
     "itertools",
     "sublist",
     "superlist",
